# ProjectSamples

Fast API/: .env  .gitignore  pyproject.toml
Fast API/app/: main.py
Fast API/app/api/: deps.py
Fast API/app/api/v1/: router.py
Fast API/app/api/v1/endpoints/: user.py
Fast API/app/core/: configs.py  context.py  log.py  metrics.py  security.py
Fast API/app/crud/: __init__.py  base.py  crud_user.py  query.py
Fast API/app/exceptions/: __init__.py  base.py  handlers.py  response.py
Fast API/app/exceptions/errors/: __init__.py  base.py  common.py  login.py  rate_limit.py  shared.py
Fast API/app/middlewares/: __init__.py  access_context.py  metrics.py
Fast API/app/models/: __init__.py  base.py  books.py  user.py
Fast API/app/schemas/: __init__.py  pagination.py  user.py
Fast API/app/tests/: conftest.py  utils.py
Fast API/app/tests/crud/: test_user.py
Fast API/migrations/app/: 1_20240429120742_books.py
React-Next/app/: .env  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
React-Next/app/Core/: controller.ts  formatters.ts
React-Next/app/Core/axios/: client.ts  job-titles.ts  main-absence-report.ts  projects.ts
React-Next/app/app/: layout.tsx  providers.tsx
React-Next/app/app/clients/: page.tsx
React-Next/app/app/projects/: page.tsx
React-Next/app/app/timesheets-status/: page.tsx
React-Next/app/components/charts/: steam.tsx
React-Next/app/components/layout/: layout.tsx
React-Next/app/components/loading/: loading-modal.tsx
React-Next/app/components/main/: main-container.tsx
React-Next/app/components/main-report-filters/: filters-component.tsx
React-Next/app/components/navbar/: darkmodeswitch.tsx  navbar.tsx  user-dropdown.tsx
React-Next/app/config/: fonts.ts
React-Next/app/db/: job-title.ts  main-export.ts  projects.ts
React-Next/app/middlewares/: auth.ts  cache-controller.ts
React-Next/app/prisma/: schema.prisma
blockchain/: account.py  distributer.py  get.py  readme.md  selector.py
(+45 files in other folders)
